app-test/testdata/typesystem/neg/algebraic-type-duplicate-variant/src/adt.cal
namespace adt:
    type T : A | A(int a, bool b) end // error
    actor DuplicateVariant() ==> T OUT:
        do
            OUT <-- A;
        end
    end
end